# rbr-tools

./: .prettierrc.json5  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts
.tauri/: rbr-tools.key  rbr-tools.key.pub
npm-scripts/: tauri-build.cjs  tauri-dev.cjs  update-tauri-config-schema.cjs  update-version.cjs
npm-scripts/commons/: vars.cjs
src/: App.vue  main.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json  tauri.conf.schema.json
src-tauri/capabilities/: desktop.json
src-tauri/src/: cancel_config_readonly.rs  file_log.rs  lib.rs  main.rs  path_utils.rs  rbr_tools.rs  rbri18n_config.rs  rbri18n_installer.rs  rsf_config.rs  sim_rally_cn_config.rs  sim_rally_cn_installer.rs
src/invoke-apis/: cancel-config-readonly.ts  file-log.ts  rbr-tools.ts  rbri18n-config.ts  rbri18n-installer.ts  rsf-config.ts  sim-rally-cn-config.ts  sim-rally-cn-installer.ts
src/lib-loader/: loadCss.ts  loadElementPlus.ts  loadLib.ts  loadPinia.ts  loadRouter.ts  loadTailwind.ts
src/menu/: index.ts
src/router/: index.ts  page-routes.ts
src/stores/: useElementPlusStore.ts  useRbrToolsStore.ts
src/tauri-init/: tauriInit.ts
src/tray-menu/: index.ts
src/types/: commons.ts  components.d.ts  element-plus-data.ts
src/utils/: DonationCodeUtils.ts  LoadingUtils.ts  PromiseUtil.ts  TauriUtils.ts  VueUtils.ts  base64Utils.ts  checkUpdate.ts  invokeWrapper.ts  localStorageUtil.ts  sessionStorageRef.ts  simpleClone.ts  tauriStoreUtils.ts
vite-config/: index.ts
vite-config/commons/: var.ts
(+46 files in other folders)
